[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdisco"
version = "0.1.0"
description = "Python client for the Agent Disco API — grade any public URL for AI-agent discoverability."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "Starsol Ltd", email = "disty@agentdisco.io" },
]
keywords = ["agentdisco", "ai-agents", "discoverability", "llms-txt", "openapi", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://agentdisco.io"
Documentation = "https://agentdisco.io/api/docs"
Repository = "https://github.com/StarsolLtd/agent-disco"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdisco"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.9"
strict = true
# SDK is small and user-facing — strict typing is worth the cost.
